--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
     "@oclif/config": "^1",
     "@oclif/plugin-help": "^3",
     "@types/fs-extra": "^9.0.4",
+    "@types/luxon": "^1.25.0",
+    "axios": "^0.21.0",
     "fs-extra": "^9.0.1",
+    "luxon": "^1.25.0",
+    "os": "^0.1.1",
+    "path": "^0.12.7",
+    "timestring": "^6.0.0",
     "tslib": "^1"
   },
   "devDependencies": {
